--- a/views/create.erb
+++ b/views/create.erb
@@ -1,8 +1,6 @@
-<h1>Details for student: <%=@student.id %></h1>
+<h1>New student registered: <%=@student.id %></h1>
 
 <p>Student name: <%=  "#{@student.first_name} #{@student.second_name}" %></p>
 <p>House: <%=  "#{@student.house}" %></p>
 <p>Age: <%=  "#{@student.age}" %></p>
-
-<p><a href="/hogwarts">Click here to go back to the student list</a></p>
 <hr>
