--- a/views/index.erb
+++ b/views/index.erb
@@ -1,9 +1,14 @@
+<p>Click <a href="/hogwarts/new"> to create a new
 
 <% for student in @students do  %>
 
-  <p>Student name:<%=  "#{student.first_name} #{student.second_name}" %></p>
-  <p>House:<%=  "#{student.house}" %></p>
-  <p>Age:<%=  "#{student.age}" %></p>
+ student</a></p>
+
+  <p>Student name: <%=  "#{student.first_name} #{student.second_name}" %></p>
+  <p>House: <%=  "#{student.house}" %></p>
+  <p>Age: <%=  "#{student.age}" %></p>
+
+  <p><a href="/hogwarts/<%= student.id %>">Show student detail</a></p>
   <hr>
 
 <% end %>
