Select tag autopopulates

--- a/views/create.erb
+++ b/views/create.erb
@@ -1,6 +1,6 @@
 <h1>New student registered: <%=@student.id %></h1>
 
 <p>Student name: <%=  "#{@student.first_name} #{@student.second_name}" %></p>
-<p>House: <%=  "#{@student.house}" %></p>
+<p>House: <%=  "#{@student.house.name}" %></p>
 <p>Age: <%=  "#{@student.age}" %></p>
 <hr>
