--- a/views/layout.erb
+++ b/views/layout.erb
@@ -3,6 +3,12 @@
   <head>
     <meta charset="utf-8">
     <title>Hogwarts</title>
+    <link rel="stylesheet" href="/style.css">
+    <nav>
+        <a href="/hogwarts/new">Enroll student</a>
+        <a href="/hogwarts">See all our students</a>
+
+    </nav>
   </head>
   <body>
     <%= yield %>
